--- a/src/app/features/auth/login/login.scss
+++ b/src/app/features/auth/login/login.scss
@@ -40,7 +40,7 @@
       border-radius: 4px;
       cursor: pointer;
       &:disabled {
-        background-color: #ccc;
+        background-color: #c5cae9;
         cursor: not-allowed;
       }
     }
@@ -49,9 +49,25 @@
       color: #e53935;
       font-size: 0.8rem;
       text-align: left;
-      margin-top: -10px; // لتقريب الرسالة من الحقل
+      margin-top: -10px;
       margin-bottom: 10px;
       display: block;
+    }
+  }
+
+  p {
+    margin-top: 1.5rem;
+    color: #666;
+    font-size: 0.95rem;
+
+    a {
+      color: #3f51b5;
+      text-decoration: none;
+      font-weight: 600;
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
