feat: implement UI logic and service for independent attachment removal

--- a/src/app/features/tasks/task-details/components/task-details-form/task-details-form.html
+++ b/src/app/features/tasks/task-details/components/task-details-form/task-details-form.html
@@ -14,15 +14,27 @@
   <div class="attachment-section">
     @if (task.attachment) {
     <div class="existing-attachment">
-      <button
-        type="button"
-        (click)="download.emit()"
-        class="download-link-btn"
-        [disabled]="isDownloading"
-      >
-        <i class="fas {{ isDownloading ? 'fa-spinner fa-spin' : 'fa-download' }}"></i>
-        {{ isDownloading ? 'Downloading...' : 'Download current attachment' }}
-      </button>
+      <div class="attachment-actions">
+        <button
+          type="button"
+          (click)="download.emit()"
+          class="download-link-btn"
+          [disabled]="isDownloading"
+        >
+          <i class="fas {{ isDownloading ? 'fa-spinner fa-spin' : 'fa-download' }}"></i>
+          Download attachment
+        </button>
+
+        <button
+          type="button"
+          (click)="remove.emit()"
+          class="remove-attachment-btn"
+          title="Remove attachment"
+          [disabled]="isRemoving"
+        >
+          <i class="fas {{ isRemoving ? 'fa-spinner fa-spin' : 'fa-times' }}"></i>
+        </button>
+      </div>
     </div>
     }
 
