--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,12 @@
   --primary-font: 'Poppins', sans-serif;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: var(--primary-font);
 }
