fix: hide comments section in create mode

--- a/src/app/features/tasks/task-details/task-details.html
+++ b/src/app/features/tasks/task-details/task-details.html
@@ -18,7 +18,8 @@
     (remove)="onRemoveAttachment()"
     (fileSelected)="onFileSelected($event)"
   ></app-task-details-form>
+  @if (isEditMode) {
   <hr class="section-divider" />
   <app-task-comments [taskId]="task.id"></app-task-comments>
-  }
+  } }
 </div>
